ingress/argocd-install.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: argocd
---
# Full ArgoCD installation would be via Helm or Kustomize:
# helm repo add argo https://argoproj.github.io/argo-helm
# helm install argocd argo/argo-cd --namespace argocd --create-namespace
