ingress/fluxcd-install.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: flux-system
---
# To install:
# flux install --namespace=flux-system
